--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link rel="stylesheet" href="normalize.css"/>
-  <link rel="stylesheet" href="wwcode.css"/>
+  <link rel="stylesheet" href="css/normalize.css"/>
+  <link rel="stylesheet" href="css/index.css"/>
 
   <script src="jquery.js"></script>
   <script src="jquery.timeago.js"></script>
